# python-mocking

./: .python-version  pyproject.toml
python_mocking/: mocking_async.py  mocking_sync.py  patching.py
tests/: conftest.py  test_mocking_async.py  test_mocking_sync.py  test_patching_async.py
