[tool.poetry]
name = "python-mocking"
version = "0.1.0"
description = ""
authors = ["Cristian Angulo Nova <cristianangulonova@gmail.com>"]
readme = "README.md"
packages = [{include = "python_mocking"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.pytest-mock.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
